# hangman

./: setup.cfg
hangman/: __init__.py  main.py
