[metadata]
name = hangman
version = attr: version.__version__
description = Hangman game
long_description = file: README.md
long_description_content_type = text/markdown
author = Abdulrahman M. Zaky
author-email = aionmone14@gmail.com
license = MIT
url = https://github.com/Aionmone/hangman
project_urls =
    Bug Tracker = https://github.com/Aionmone/hangman/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License

[options]
include_package_data = True
package_dir =
    = hangman
packages = find:

[options.packages.find]
where = hangman

[options.entry_points]
console_scripts =
    hangman=hangman.main:main
